# rust-chess-3d

./: Cargo.toml  License.md  README.md
.cargo/: config_fast_builds
src/: board.rs  borad.rs  main.rs  pieces.rs  ui.rs
