[package]
name = "rust-chess-3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy_mod_picking = "0.12"  # https://github.com/aevyrie/bevy_mod_picking/
bevy_tweening = "0.7"

# Enable only a small amount of optimization in debug mode
# See: https://bevy-cheatbook.github.io/pitfalls/performance.html
[profile.dev]
opt-level = 1
